# x-api

./: .gitignore  README.md  makefile  pyproject.toml  requirements.dev.txt  requirements.txt
femto_admin/: api.py
sample_apps/minimal/: main.py  models.py  requirements.txt
tortoise_api/: __init__.py  api.py  loader.py  oauth.py  util.py
